@startuml

title __IMPL's Class Diagram__\n

  package uk.ac.ebi.pride.utilities.iongen {
    package uk.ac.ebi.pride.utilities.iongen.impl {
      abstract class AbstractPrecursorIon {
          + AbstractPrecursorIon()
          - getProductIonPTM()
          + getProductIon()
      }
    }
  }
  

  package uk.ac.ebi.pride.utilities.iongen {
    package uk.ac.ebi.pride.utilities.iongen.impl {
      abstract class AbstractProductIon {
          - position : int
          + AbstractProductIon()
          + getType()
          + getPrecursorIon()
          + getPosition()
          + compareTo()
          + getMass()
      }
    }
  }
  

  package uk.ac.ebi.pride.utilities.iongen {
    package uk.ac.ebi.pride.utilities.iongen.impl {
      class DefaultPeptideIon {
          - charge : int
          - mass : double
          - calculateMass()
          + DefaultPeptideIon()
          + getMassOverCharge()
          + getCharge()
          + getMass()
          + getPeptide()
          + equals()
          + hashCode()
          + toString()
      }
    }
  }
  

  package uk.ac.ebi.pride.utilities.iongen {
    package uk.ac.ebi.pride.utilities.iongen.impl {
      class DefaultPrecursorIon {
          + DefaultPrecursorIon()
          + DefaultPrecursorIon()
          + DefaultPrecursorIon()
          + DefaultPrecursorIon()
      }
    }
  }
  

  package uk.ac.ebi.pride.utilities.iongen {
    package uk.ac.ebi.pride.utilities.iongen.impl {
      class DefaultProductIon {
          + DefaultProductIon()
          + toString()
      }
    }
  }
  

  package uk.ac.ebi.pride.utilities.iongen {
    package uk.ac.ebi.pride.utilities.iongen.impl {
      class ImmoniumIon {
          - typeName : String
          - charge : int
          - position : int
          + ImmoniumIon()
          + ImmoniumIon()
          + toString()
          + getMass()
          + getMassOverCharge()
          + getCharge()
          + getPosition()
          + getAcid()
          + getTypeName()
          + compareTo()
      }
    }
  }
  

  AbstractPrecursorIon -up-|> PrecursorIon
  AbstractPrecursorIon -up-|> DefaultPeptideIon
  AbstractProductIon -up-|> ProductIon
  AbstractProductIon -up-|> Comparable
  AbstractProductIon -up-|> DefaultPeptideIon
  AbstractProductIon o-- PrecursorIon : precursorIon
  AbstractProductIon o-- ProductIonType : type
  DefaultPeptideIon -up-|> PeptideIon
  DefaultPeptideIon o-- Peptide : peptide
  DefaultPrecursorIon -up-|> AbstractPrecursorIon
  DefaultProductIon -up-|> AbstractProductIon
  ImmoniumIon -up-|> Comparable
  ImmoniumIon o-- AminoAcid : acid
  ImmoniumIon o-- PTModification : modification


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
